@@ -80,6 +80,7 @@ const char *gengetopt_args_info_help[] = {
   "      --uamallowed=STRING       Domain names exempt from access check ",
   "      --uamanydns               Allow client to use any DNS server  \n                                  (default=off)",
   "      --uamanyip                Allow client to use any IP Address  \n                                  (default=off)",
+  "      --wisprlogin=STRING       A specific WISPr login url to be used",
   "      --nouamsuccess            Do not return to the UAM server on success, \n                                  original url instead  (default=off)",
   "      --nouamwispr              Do not send WISPr XML from ChilliSpot, assume \n                                  back-end does  (default=off)",
   "      --uamlogoutip=STRING      HTTP Auto-Logout IP Address  \n                                  (default=`1.1.1.1')",
@@ -216,6 +217,7 @@ void clear_given (struct gengetopt_args_info *args_info)
   args_info->uamallowed_given = 0 ;
   args_info->uamanydns_given = 0 ;
   args_info->uamanyip_given = 0 ;
+  args_info->wisprlogin_given = 0 ;
   args_info->nouamsuccess_given = 0 ;
   args_info->nouamwispr_given = 0 ;
   args_info->uamlogoutip_given = 0 ;
@@ -350,6 +352,8 @@ void clear_args (struct gengetopt_args_info *args_info)
   args_info->uamallowed_orig = NULL;
   args_info->uamanydns_flag = 0;
   args_info->uamanyip_flag = 0;
+  args_info->wisprlogin_arg = NULL;
+  args_info->wisprlogin_orig = NULL;
   args_info->nouamsuccess_flag = 0;
   args_info->nouamwispr_flag = 0;
   args_info->uamlogoutip_arg = gengetopt_strdup ("1.1.1.1");
@@ -462,39 +466,40 @@ void init_args_info(struct gengetopt_args_info *args_info)
   args_info->uamallowed_max = -1;
   args_info->uamanydns_help = gengetopt_args_info_help[52] ;
   args_info->uamanyip_help = gengetopt_args_info_help[53] ;
-  args_info->nouamsuccess_help = gengetopt_args_info_help[54] ;
-  args_info->nouamwispr_help = gengetopt_args_info_help[55] ;
-  args_info->uamlogoutip_help = gengetopt_args_info_help[56] ;
-  args_info->defsessiontimeout_help = gengetopt_args_info_help[57] ;
-  args_info->defidletimeout_help = gengetopt_args_info_help[58] ;
-  args_info->macauth_help = gengetopt_args_info_help[59] ;
-  args_info->macallowed_help = gengetopt_args_info_help[60] ;
+  args_info->wisprlogin_help = gengetopt_args_info_help[54] ;
+  args_info->nouamsuccess_help = gengetopt_args_info_help[55] ;
+  args_info->nouamwispr_help = gengetopt_args_info_help[56] ;
+  args_info->uamlogoutip_help = gengetopt_args_info_help[57] ;
+  args_info->defsessiontimeout_help = gengetopt_args_info_help[58] ;
+  args_info->defidletimeout_help = gengetopt_args_info_help[59] ;
+  args_info->macauth_help = gengetopt_args_info_help[60] ;
+  args_info->macallowed_help = gengetopt_args_info_help[61] ;
   args_info->macallowed_min = -1;
   args_info->macallowed_max = -1;
-  args_info->macsuffix_help = gengetopt_args_info_help[61] ;
-  args_info->macpasswd_help = gengetopt_args_info_help[62] ;
-  args_info->macallowlocal_help = gengetopt_args_info_help[63] ;
-  args_info->wwwdir_help = gengetopt_args_info_help[64] ;
-  args_info->wwwbin_help = gengetopt_args_info_help[65] ;
-  args_info->uamui_help = gengetopt_args_info_help[66] ;
-  args_info->adminuser_help = gengetopt_args_info_help[67] ;
-  args_info->adminpasswd_help = gengetopt_args_info_help[68] ;
-  args_info->nasmac_help = gengetopt_args_info_help[69] ;
-  args_info->nasip_help = gengetopt_args_info_help[70] ;
-  args_info->ssid_help = gengetopt_args_info_help[71] ;
-  args_info->vlan_help = gengetopt_args_info_help[72] ;
-  args_info->cmdsocket_help = gengetopt_args_info_help[73] ;
-  args_info->swapoctets_help = gengetopt_args_info_help[74] ;
-  args_info->usestatusfile_help = gengetopt_args_info_help[75] ;
-  args_info->localusers_help = gengetopt_args_info_help[76] ;
-  args_info->postauthproxy_help = gengetopt_args_info_help[77] ;
-  args_info->postauthproxyport_help = gengetopt_args_info_help[78] ;
-  args_info->wpaguests_help = gengetopt_args_info_help[79] ;
-  args_info->openidauth_help = gengetopt_args_info_help[80] ;
-  args_info->papalwaysok_help = gengetopt_args_info_help[81] ;
-  args_info->chillixml_help = gengetopt_args_info_help[82] ;
-  args_info->acctupdate_help = gengetopt_args_info_help[83] ;
-  args_info->usetap_help = gengetopt_args_info_help[84] ;
+  args_info->macsuffix_help = gengetopt_args_info_help[62] ;
+  args_info->macpasswd_help = gengetopt_args_info_help[63] ;
+  args_info->macallowlocal_help = gengetopt_args_info_help[64] ;
+  args_info->wwwdir_help = gengetopt_args_info_help[65] ;
+  args_info->wwwbin_help = gengetopt_args_info_help[66] ;
+  args_info->uamui_help = gengetopt_args_info_help[67] ;
+  args_info->adminuser_help = gengetopt_args_info_help[68] ;
+  args_info->adminpasswd_help = gengetopt_args_info_help[69] ;
+  args_info->nasmac_help = gengetopt_args_info_help[70] ;
+  args_info->nasip_help = gengetopt_args_info_help[71] ;
+  args_info->ssid_help = gengetopt_args_info_help[72] ;
+  args_info->vlan_help = gengetopt_args_info_help[73] ;
+  args_info->cmdsocket_help = gengetopt_args_info_help[74] ;
+  args_info->swapoctets_help = gengetopt_args_info_help[75] ;
+  args_info->usestatusfile_help = gengetopt_args_info_help[76] ;
+  args_info->localusers_help = gengetopt_args_info_help[77] ;
+  args_info->postauthproxy_help = gengetopt_args_info_help[78] ;
+  args_info->postauthproxyport_help = gengetopt_args_info_help[79] ;
+  args_info->wpaguests_help = gengetopt_args_info_help[80] ;
+  args_info->openidauth_help = gengetopt_args_info_help[81] ;
+  args_info->papalwaysok_help = gengetopt_args_info_help[82] ;
+  args_info->chillixml_help = gengetopt_args_info_help[83] ;
+  args_info->acctupdate_help = gengetopt_args_info_help[84] ;
+  args_info->usetap_help = gengetopt_args_info_help[85] ;
   
 }
 
@@ -932,6 +937,16 @@ cmdline_parser_release (struct gengetopt_args_info *args_info)
       args_info->uamallowed_arg = 0;
       free (args_info->uamallowed_orig); /* free previous argument */
       args_info->uamallowed_orig = 0;
+    }
+  if (args_info->wisprlogin_arg)
+    {
+      free (args_info->wisprlogin_arg); /* free previous argument */
+      args_info->wisprlogin_arg = 0;
+    }
+  if (args_info->wisprlogin_orig)
+    {
+      free (args_info->wisprlogin_orig); /* free previous argument */
+      args_info->wisprlogin_orig = 0;
     }
   if (args_info->uamlogoutip_arg)
     {
@@ -1487,6 +1502,13 @@ cmdline_parser_file_save(const char *filename, struct gengetopt_args_info *args_
   if (args_info->uamanyip_given) {
     fprintf(outfile, "%s\n", "uamanyip");
   }
+  if (args_info->wisprlogin_given) {
+    if (args_info->wisprlogin_orig) {
+      fprintf(outfile, "%s=\"%s\"\n", "wisprlogin", args_info->wisprlogin_orig);
+    } else {
+      fprintf(outfile, "%s\n", "wisprlogin");
+    }
+  }
   if (args_info->nouamsuccess_given) {
     fprintf(outfile, "%s\n", "nouamsuccess");
   }
@@ -1962,6 +1984,7 @@ cmdline_parser_internal (int argc, char * const *argv, struct gengetopt_args_inf
         { "uamallowed",	1, NULL, 0 },
         { "uamanydns",	0, NULL, 0 },
         { "uamanyip",	0, NULL, 0 },
+        { "wisprlogin",	1, NULL, 0 },
         { "nouamsuccess",	0, NULL, 0 },
         { "nouamwispr",	0, NULL, 0 },
         { "uamlogoutip",	1, NULL, 0 },
@@ -3004,6 +3027,25 @@ cmdline_parser_internal (int argc, char * const *argv, struct gengetopt_args_inf
             local_args_info.uamanyip_given = 1;
             args_info->uamanyip_given = 1;
             args_info->uamanyip_flag = !(args_info->uamanyip_flag);
+          }
+          /* A specific WISPr login url to be used.  */
+          else if (strcmp (long_options[option_index].name, "wisprlogin") == 0)
+          {
+            if (local_args_info.wisprlogin_given)
+              {
+                fprintf (stderr, "%s: `--wisprlogin' option given more than once%s\n", argv[0], (additional_error ? additional_error : ""));
+                goto failure;
+              }
+            if (args_info->wisprlogin_given && ! override)
+              continue;
+            local_args_info.wisprlogin_given = 1;
+            args_info->wisprlogin_given = 1;
+            if (args_info->wisprlogin_arg)
+              free (args_info->wisprlogin_arg); /* free previous string */
+            args_info->wisprlogin_arg = gengetopt_strdup (optarg);
+            if (args_info->wisprlogin_orig)
+              free (args_info->wisprlogin_orig); /* free previous string */
+            args_info->wisprlogin_orig = gengetopt_strdup (optarg);
           }
           /* Do not return to the UAM server on success, original url instead.  */
           else if (strcmp (long_options[option_index].name, "nouamsuccess") == 0)
